Clean up HTML and JavaScript code. Refactor CSS classes. Add header fragment. Regroup view files and configure routers.

--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/static/css/job-recruit-alternative.css
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/static/css/job-recruit-alternative.css
@@ -1,25 +1,21 @@
 body {
     background-color: #ff7d1f !important;
-    /* background-color: #fff691 !important; */
     background: url("https://wallpaperlayer.com/img/2015/4/awesome-yellow-wallpaper-76-120-hd-wallpapers.jpg") no-repeat;
 }
-.top-background{
+
+.top-background {
     background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237119/demo-image/world-map.png") no-repeat;
-    background-position-x: 0%;
-    background-position-y: 0%
+    background-position-x: 0;
+    background-position-y: 0;
 }
+
 .container-fluid {
     width: 80vw !important;
 }
 
 .folder {
-    /* background: url("../images/world-map.png") no-repeat; */
-    /* background-size: 95% 95%; */
     background-color: rgb(235, 231, 231);
-    /* background-attachment: fixed; */
-    /* background-position: center;  */
     background-position-y: 20%;
-    /* box-shadow: black 0 5px 10px 0; */
     z-index: 20;
     margin-top: 5%;
 }
@@ -34,36 +30,32 @@ body {
 
 #content {
     border-radius: 20px;
-    height: calc(100vh - 200px);
     top: 10px;
-    /* min-height: 800px;  */
     height: 80%;
     margin-bottom: 200px
 }
+
 .job-detail1 {
     background-color: white;
     margin-top: 15px;
-    /* margin-bottom: 15px; */
-    border-top-left-radius:10px;
-    border-bottom-left-radius:10px;
-    padding:2%;
-    
-  }
-  .job-detail2 {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding: 2%;
+}
+
+.job-detail2 {
     background-color: white;
     margin-top: 15px;
-    /* margin-bottom: 15px; */
-    /* border-radius:10px; */
     border-left: 1px solid rgb(182, 182, 182);
     border-right: 1px solid rgb(182, 182, 182);
-    padding:2%;
-    
-  }
-  .job-detail3 {
+    padding: 2%;
+
+}
+
+.job-detail3 {
     background-color: white;
     margin-top: 15px;
-    /* margin-bottom: 15px; */
-    border-top-right-radius:10px;
-    border-bottom-right-radius:10px;
-    padding:2%;
-  }
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding: 2%;
+}
