--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/static/css/result.css
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/static/css/result.css
@@ -1,52 +1,56 @@
-body{
-    background-color: #ff7d1f !important; 
-    /* background-color: #fff691 !important; */
+body {
+    background-color: #ff7d1f !important;
     background: url("https://wallpaperlayer.com/img/2015/4/awesome-yellow-wallpaper-76-120-hd-wallpapers.jpg") no-repeat;
-  }
-  .folder {
-        background-color: rgb(235, 231, 231);
-      }
-      .container-fluid {
-        width: 80vw !important;
-      }
-.result{
-    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237123/demo-image/banner-alternative.png")no-repeat center;
-    max-width:100%;
-    max-height:100%;
+}
+
+.folder {
+    background-color: rgb(235, 231, 231);
+}
+
+.container-fluid {
+    width: 80vw !important;
+}
+
+.result {
+    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237123/demo-image/banner-alternative.png") no-repeat center;
+    max-width: 100%;
+    max-height: 100%;
     background-size: contain;
-    height:590px;
-    width:280px; 
-    padding-top:23px;
-    cursor:pointer;
+    height: 590px;
+    width: 280px;
+    padding-top: 23px;
+    cursor: pointer;
 }
-.result>div>img{
-    height:180px;
-    width:180px;
 
+.result > div > img {
+    height: 180px;
+    width: 180px;
 }
-.result-smaller{
-    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237123/demo-image/banner-alternative.png")no-repeat center;
-    max-width:100%;
-    max-height:100%;
+
+.result-smaller {
+    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237123/demo-image/banner-alternative.png") no-repeat center;
+    max-width: 100%;
+    max-height: 100%;
     background-size: contain;
-    height:530px;
-    width:250px; 
-    padding-top:18px;
-    cursor:pointer;
-}
-.result-smaller>div>img{
-    height:150px;
-    width:150px;
-
+    height: 530px;
+    width: 250px;
+    padding-top: 18px;
+    cursor: pointer;
 }
 
-#content-result{
+.result-smaller > div > img {
+    height: 150px;
+    width: 150px;
+}
+
+#content-result {
     border-radius: 20px 20px 20px 20px;
     height: calc(100vh - 200px);
     top: 50px;
-    min-height: 850px; 
+    min-height: 850px;
     width: 80vw !important;
 }
+
 section.range-slider {
     position: relative;
     width: 50%;
@@ -54,7 +58,6 @@ section.range-slider {
 }
 
 section.range-slider input {
-    
     pointer-events: none;
     position: absolute;
     overflow: hidden;
@@ -66,7 +69,6 @@ section.range-slider input {
     margin: 0;
     padding: 0;
     border: 0;
-    /* opacity: 0.8; */
 }
 
 section.range-slider input::-webkit-slider-thumb {
@@ -76,9 +78,9 @@ section.range-slider input::-webkit-slider-thumb {
     outline: 0;
     width: 20px;
     height: 20px;
-    background:#f32b07;
+    background: #f32b07;
     cursor: pointer;
-    border-radius: 50%; 
+    border-radius: 50%;
 }
 
 section.range-slider input::-moz-range-thumb {
@@ -88,9 +90,9 @@ section.range-slider input::-moz-range-thumb {
     -moz-appearance: none;
     width: 20px;
     height: 20px;
-    background:#f32b07;
+    background: #f32b07;
     cursor: pointer;
-    border-radius: 50%; 
+    border-radius: 50%;
 }
 
 section.range-slider input::-moz-range-track {
@@ -99,106 +101,101 @@ section.range-slider input::-moz-range-track {
     background-color: grey;
     border: 0;
 }
+
 section.range-slider input:last-of-type::-moz-range-track {
     -moz-appearance: none;
     background: none transparent;
     border: 0;
 }
-  section.range-slider input[type=range]::-moz-focus-outer {
-  border: 0;
+
+section.range-slider input[type=range]::-moz-focus-outer {
+    border: 0;
 }
+
 .modal-body > div > input {
-    width:70px;
+    width: 70px;
 }
-.rangeValues{
+
+.rangeValues {
     margin-bottom: 25px;
-    width:70px;
+    width: 70px;
 
 }
-.banner-description{
-    /* border:1px solid grey; */
-    width:1300px;
-    height:130px;
-    margin-left:-63px !important;
+
+.banner-description {
+    width: 1300px;
+    height: 130px;
+    margin-left: -63px !important;
     margin-right: -63px !important;
     background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237103/demo-image/orange-background-banner.jpg") no-repeat;
     background-size: 100% 80%;
-    /* margin-top: -70px; */
-   
-
 }
-#triangle {
+
+.triangle-left {
     width: 0;
     height: 0;
-    border-style: solid;
-    border-width: 32px;
-    /* border-top-color: #e27e21; */
-    border-top-color: transparent;
-    border-bottom-color: #ec1f04;
-    border-left-color: transparent;
+    border: 32px solid transparent;
     border-right-color: #ec1f04;
-    /* border-right-color: #e27e21; */
+    border-bottom-color: #ec1f04;
     margin-left: -65px;
     margin-top: -50px;
-  }
-  #triangle2 {
+}
+
+.triangle-right {
     width: 0;
     height: 0;
-    border-style: solid;
-    border-width: 32px;
-    border-top-color: #d8ca64;
-    border-bottom-color: transparent;
-    border-left-color: #d8ca64;
+    border: 32px solid #d8ca64;
     border-right-color: transparent;
-    margin-left: 797px;
+    border-bottom-color: transparent;
+    margin-left: 795px;
     margin-top: -28px;
-
-  } 
-  .job-result{
-    padding-left:20%;
-    padding-right:20%;
-    height:120px;
-  }
-.greyout{
-    background-color: whitesmoke;
-    cursor:default;
 }
-.collegeScoreInput{
-    padding:3%;
+
+.job-result {
+    padding-left: 20%;
+    padding-right: 20%;
+    height: 120px;
+}
+
+.grey-out {
+    background-color: whitesmoke;
+    cursor: default;
+}
+
+.college-score-input {
+    padding: 3%;
     border-bottom: 1px solid rgb(209, 209, 209);
 }
 
-.text-conclusion{
-    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237111/demo-image/result-conclusion.png")no-repeat center;
-    
-    background-size:  100% 100%;
+.text-conclusion {
+    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237111/demo-image/result-conclusion.png") no-repeat center;
+    background-size: 100% 100%;
     color: rgb(238, 237, 237);
-    margin-left:-63px !important;
+    margin-left: -63px !important;
     margin-right: -63px !important;
     margin-top: 100px !important;
     padding-left: 10%;
-    padding-right:10%;
+    padding-right: 10%;
+}
 
-}
-.lastest-result-text{
-    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237111/demo-image/result-text.png")no-repeat center;
-    background-size:  100% 100%;
-    width:250px;
-    margin-left:20%;
-   
+.latest-result-text {
+    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237111/demo-image/result-text.png") no-repeat center;
+    background-size: 100% 100%;
+    width: 250px;
+    margin-left: 20%;
     text-align: center;
-    margin-top:-5%;
-    margin-bottom:8%;
-    color:rgb(240, 240, 240)
+    margin-top: -5%;
+    margin-bottom: 8%;
+    color: rgb(240, 240, 240)
 }
-.predict-result-text{
-    /* background: url("../images/predict-text.png")no-repeat center; */
-    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237111/demo-image/result-text.png")no-repeat center;
-    background-size:  100% 100%;
-    width:250px;
-    margin-left:-80px;
+
+.predict-result-text {
+    background: url("https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237111/demo-image/result-text.png") no-repeat center;
+    background-size: 100% 100%;
+    width: 250px;
+    margin-left: -80px;
     text-align: center;
-    margin-top:-5%;
-    margin-bottom:8%;
-    color:rgb(240, 240, 240)
+    margin-top: -5%;
+    margin-bottom: 8%;
+    color: rgb(240, 240, 240)
 }
