--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/freshmen/summary.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/freshmen/summary.html
@@ -298,7 +298,8 @@
         $('<h3>', {
             class: 'text-center',
             style: 'margin-top: 1%',
-            html: 'Top các nhóm kỹ năng thông dụng nhất cho vị trí<br><h1 style="font-weight: bold; margin-top: 1%">' + position.name + '</h1>'
+            html: 'Top các nhóm kỹ năng thông dụng nhất cho vị trí<br>' +
+                '<h1 style="font-weight: bold; margin-top: 1%">' + position.name + '</h1>'
         }).appendTo(homeDiv)
 
         let skillTypes = []
