Group JavaScript files. Add functions for generating predictions skills' trends.

--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/static/css/result.css
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/static/css/result.css
@@ -204,3 +204,7 @@ section.range-slider input[type=range]::-moz-focus-outer {
     background-color: #ff6215;
     color: rgb(238, 237, 237);
 }
+
+.modal-backdrop.show {
+    opacity: 0.85;
+}
