--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/fragments/general.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/fragments/general.html
@@ -22,14 +22,14 @@
     </a>
     <div class="collapse navbar-collapse  justify-content-center  menu"
          id="navbarSupportedContent">
-        <a class="mx-5"
+        <!--<a class="mx-5"
            href="#">Tuyển Dụng</a>
         <a class="mx-5"
            href="/ket-qua">Thống Kê</a>
         <a class="mx-5"
            href="#">Tuyển Dụng</a>
         <a class="mx-5"
-           href="#">Thống Kê</a>
+           href="#">Thống Kê</a>-->
     </div>
     <span class="fa-stack">
             <i class="fa fa-user-circle-o fa-stack-1x"
