--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/partner/job-list.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/partner/job-list.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      lang="vn">
 
 <head>
-    <title>Danh sách tuyển dụng</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Danh sách tuyển dụng</title>
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../../../../css/style.css">
-    <link rel="stylesheet" href="../../../../css/listjob.css">
+
+    <!-- Custom -->
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/job-list.css}">
+
+    <!-- JavaScript -->
+    <script th:src="@{js/services-routes.js}"></script>
 </head>
 
 <body onload="getListRecruitment()">
@@ -30,125 +36,57 @@
 </script>
 
 <!-- Header -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height: 45px">
-    <a class="navbar-brand" href="../index.html">
-        <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png"
-             width="90" height="27" class="d-inline-block align-top" alt="CTSA logo">
-    </a>
+<div th:replace="fragments/general.html :: header"></div>
 
-    <div class="collapse navbar-collapse  justify-content-center  menu" id="navbarSupportedContent">
-        <a class="mx-5" href="#">Tuyển Dụng</a>
-        <a class="mx-5" href="./graph.html">Thống Kê</a>
-        <a class="mx-5" href="#">Tuyển Dụng</a>
-        <a class="mx-5" href="#">Thống Kê</a>
-
-    </div>
-    <span class="fa-stack">
-                <i class="fa fa-user-circle-o fa-stack-1x" style="font-size:36px; color:white"></i>
-            </span>
-</nav>
-<!-- End of Header -->
 <div class="container-fluid">
-
     <div id="content" class="tab-content col-md-12 folder">
         <h1 class="text-center pt-3 pb-2">TIN TUYỂN DỤNG</h1>
         <div class="row">
             <div class="col-md-12 list-jobs">
 
-                <!-- Pagination -->
-                <!-- <div class="row justify-content-center">
-                    <ul class="pagination">
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                            </a>
-                        </li>
-                        <li class="page-item"><a class="page-link page-selected" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div> -->
-
             </div>
-
-            <!-- Company Spotlight Div
-            <div class="col-md-3">
-                <div id="sidebar">
-                    <div class="inside">
-
-                        <div class="photos">
-                            <div class="headline-photo">
-                                <img alt="KMS Technology Headline Photo" src="https://cdn.itviec.com/photos/31336/tiny_headline_photo/kms-technology-tiny_headline_photo.png?FmkXhYxLh1HQbMPCdBfxSFiA"
-                                    width="256" height="125">
-                            </div>
-                            <div class="logo">
-                                <img src="https://cdn.itviec.com/employers/kms-technology/logo/s65/kms-technology-logo.png?gjCnVTfqe1uPf7ypqStLf9TV"
-                                    width="68" height="68">
-                            </div>
-                            <div class="info">
-                                <span class="name">
-                                    KMS Technology
-                                </span>
-                                <span class="city">
-                                    Ho Chi Minh
-                                </span>
-                                <p>Agile &amp; innovative global outsourcing</p>
-                            </div>
-                            <a class="mkt-track link" rel="nofollow" data-method="PUT" href="/companies/kms-technology?track_action=Click+Branding"></a>
-                        </div>
-                        <div class="border-around">
-                            <div class="jobs">
-                                <div class="job">
-                                    <a href="/it-jobs/senior-automation-tester-qa-qc-kms-technology-3325">Senior
-                                        Automation Tester (QA QC)</a>
-                                </div>
-                                <div class="job">
-                                    <a href="/it-jobs/senior-python-developer-kms-technology-4915">Senior
-                                        Python
-                                        Developer</a>
-                                </div>
-                                <div class="job">
-                                    <a href="/it-jobs/senior-front-end-developer-javascript-kms-technology-4641">Senior
-                                        Front-End Developer (JavaScript)</a>
-                                </div>
-                            </div>
-                            <div class="other-jobs">
-                                <a href="/companies/kms-technology#our-jobs">View 5 jobs</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-
+        </div>
+        <div class="row justify-content-center text-center">
+            <!--Pagination -->
+            <div class="row justify-content-center">
+                <ul class="pagination">
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item"><a class="page-link page-selected" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
 
-<script src="../../../../js/scroll-animate.js"></script>
+<script th:src="@{js/scroll-animate.js}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
-<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-
 <script>
     function truncateText(text, maxLength) {
         if (text.length > maxLength) {
-            var nextSpace = text.indexOf(' ', maxLength);
+            let nextSpace = text.indexOf(' ', maxLength);
             text = text.substr(0, nextSpace) + '...';
         }
 
         return text;
     }
 
-    function coundDays(startDate) {
-        var start = new Date(startDate);
-        var today = new Date();
-        var result = today.getDate() - start.getDate();
+    function countDays(startDate) {
+        let start = new Date(startDate);
+        let today = new Date();
+        let result = today.getDate() - start.getDate();
 
-        if (result == 0) {
+        if (result === 0) {
             return 'Hôm nay';
         } else {
             return result + ' ngày trước';
@@ -156,25 +94,23 @@
     }
 
     function getListRecruitment() {
-        var url = 'http://localhost:8080/recruitment';
+        let url = API_GATEWAY + COMPANY_MANAGEMENT + '/recruitment';
 
         axios.get(url)
             .then(response => {
                 let list = response.data;
 
-                var i;
-                for (i = 0; i < list.length; i++) {
-                    var recruitment = '<div class="row justify-content-around stylish-panel">'
+                for (let i = 0; i < list.length; i++) {
+                    let recruitment = '<div class="row justify-content-around stylish-panel">'
                         + '<div class="col-md-2 text-center my-auto">'
-                        + '' + (url + '<a href="/"><img src="' + list[i].id) + '' + list[i].image + '" width="200" height="200"></a>'
+                        + '<a href="/"><img src="' + list[i].image + '" width="200" height="200"></a>'
                         + '</div>'
                         + '<div class="col-md-7">'
-                        + '' + (url + '<a href="/"><h2>' + list[i].id) + '' + list[i].title + '</h2></a>'
+                        + '<a href="/"><h2 id="' + list[i].id + '">' + list[i].title + '</h2></a>'
                         + '<p class="job-description">' + truncateText(list[i].jobDescription, 250) + '</p>'
                         + '<div class="pt-5">';
 
-                    var j;
-                    for (j = 0; j < list[i].skills.length; j++) {
+                    for (let j = 0; j < list[i].skills.length; j++) {
                         recruitment += '<a href="#" class="btn btn-outline-dark">' + list[i].skills[j].skillName + '</a>&nbsp;';
                     }
 
@@ -182,7 +118,7 @@
                         + '</div>'
                         + '<div class="col-md-2 my-auto" style="text-align: right">'
                         + '<div class="btn bg-orange text-white my-2">Hot</div>&nbsp;<div class="btn btn-primary my-2">New</div>'
-                        + '<div class="my-4"><span>' + coundDays(list[i].startDate) + '</span></div>'
+                        + '<div class="my-4"><span>' + countDays(list[i].startDate) + '</span></div>'
                         + '<div class="my-4"><span>' + list[i].address + '</span></div>'
                         + '</div>'
                         + '</div>';
